2008-08-15  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Dap/Banshee.Dap/Banshee.Dap/DapService.cs: Be more careful about
	what we do inside lock().  Do actual interaction with SourceManager
	outside the lock() for Map/Unmap dap functions.

2008-08-15  Bertrand Lorentz  <bertrand.lorentz@gmail.com>

	* src/Dap/Banshee.Dap.Karma/Banshee.Dap.Karma.addin.xml:
	* src/Dap/Banshee.Dap.Karma/Banshee.Dap.Karma/KarmaTrackInfo.cs:
	* src/Dap/Banshee.Dap.Karma/Banshee.Dap.Karma/KarmaSource.cs:
	* src/Dap/Banshee.Dap.Karma/Makefile.am:
	* src/Dap/Makefile.am:
	* build/build.environment.mk:
	* configure.ac: Patch from Bob Copeland to add Karma DAP support. It is 
	enabled through the --enable-karma configure option and requires karma-sharp
	(BGO #541828).

2008-08-15  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Clients/Nereid/Nereid/PlayerInterface.cs: Fix bug with sometimes doing
	GTK/UI work not in the main thread.

2008-08-15  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Libraries/Hyena/Hyena.Data/PropertyStore.cs: Fix deadlock caused by
	a property change event triggering a propety get/set/remove.

2008-08-15  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.Services/Banshee.Database/BansheeDbFormatMigrator.cs:
	Fix bug with not triggering metadata refresh when migrating from 0.13.2.

2008-08-15  Alexander Hixon  <ahixon@gnome.org>

	* src/Libraries/Lastfm/Lastfm/AudioscrobblerConnection.cs: Only use 'Log'
	rather than 'Hyena.Log' in the code since we've already referenced it.

	* src/Extensions/Banshee.MiniMode/Banshee.MiniMode/MiniModeWindow.cs:
	Make sure we can use the hotkeys from the main window. Based on a patch by
	Ruben Vermeersch. Fixes BGO #385849.

2008-08-15  Alexander Hixon  <ahixon@gnome.org>

	* src/Libraries/Lastfm/Lastfm/AudioscrobblerConnection.cs: Only post Now
	Playing information to AS servers after all tracks have been uploaded.
	Should also fix consecutive Now Playing updates. Closes BGO #524992.
