@@ -2,7 +2,7 @@ dnl Automake setup
 
 AC_INIT([banshee-1], [1.2.1]) 
 ASM_DISPLAY_VERSION="1.2.1"
-DEVEL_BUILD=no
+DEVEL_BUILD=yes
 
 AC_CANONICAL_SYSTEM
 AC_PREREQ(2.13)
